# gpt-bot

./: .gitignore  Dockerfile  app.py  docker-compose.yml  hello.py  loader.py  pyproject.toml  sample_code.py
data/: config.py
funcs/: chat.py
handlers/: chat.py  start.py
states/: chat_state.py
utils/: set_bot_commands.py
