[tool.poetry]
name = "my-chatgpt"
version = "0.1.0"
description = ""
authors = ["Egor Krapivin <egor.krapivin98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.1.1"
aiogram = "^3.1.1"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
notebook = "^7.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
